syntax = "proto3";
package en.via.sep3_t3;
option java_multiple_files = true;
option csharp_namespace = "DatabaseRepositories";

message HouseOwnerRequest {
  int32 id = 1;
}

message HouseOwnerResponse {
  int32 id = 1;

  string email = 2;
  string password = 3;
  string profilePicture = 4;
  string CPR = 5;
  string phone = 6;
  bool isVerified = 7;
  int32 adminId = 8;

  string address = 9;
  string biography = 10;
}

message CreateHouseOwnerRequest {
  string email = 1;
  string password = 2;
  string profilePicture = 3;
  string CPR = 4;
  string phone = 5;
  bool isVerified = 6;
  int32 adminId = 7;

  string address = 8;
  string biography = 9;
}

message UpdateHouseOwnerRequest {
  int32 id = 1;

  string email = 2;
  string password = 3;
  string profilePicture = 4;
  string CPR = 5;
  string phone = 6;
  bool isVerified = 7;
  int32 adminId = 8;

  string address = 9;
  string biography = 10;
}

service HouseOwnerService {
  rpc GetHouseOwner (HouseOwnerRequest) returns (HouseOwnerResponse);
  rpc CreateHouseOwner (CreateHouseOwnerRequest) returns (HouseOwnerResponse);
  rpc UpdateHouseOwner (UpdateHouseOwnerRequest) returns (HouseOwnerResponse);
  rpc DeleteHouseOwner (HouseOwnerRequest) returns (HouseOwnerResponse);
}